--- a/Templates/index3.html
+++ b/Templates/index3.html
@@ -7,10 +7,10 @@
   <title>Inteligenci artificial|</title>
 
 
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
 
   <link rel="stylesheet" href="static\plugins\fontawesome-free\css\all.min.css">
+
 
   <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
@@ -21,6 +21,17 @@
   <link href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.css">
 
 
+
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/fontawesome-free/css/all.min.css') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='dist/css/adminlte.min.css') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/datatables-responsive/css/responsive.bootstrap4.min.css') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/datatables-buttons/css/buttons.bootstrap4.min.css') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/fontawesome-free/css/all.min.css') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/jquery/jquery.min.js') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='dist/js/pages/dashboard3.js') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/jquery/jquery.min.js') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='dist/js/adminlte.js') }}">
+  <link rel="stylesheet" href= "{{ url_for('static', filename='plugins/chart.js/Chart.min.js') }}">
 
 
 </head>
@@ -140,13 +151,13 @@
 
             </div>
             <div class="row">
-
+              
               <div class="card-body">
                 <div class="row justify-content-between">
                   <div class="col-1">
 
                     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
-
+                    
                     <input type="hidden" value={{informe}} class="form-control" placeholder="Full name" name="abandono">
                     <input type="submit" value="Posible Abandono" class="btn btn-secondary">
 
@@ -163,7 +174,7 @@
                 </div>
                 <div class="card">
 
-
+                  
                   <div class="card-body table-responsive p-0" style="height: 550px; ">
                     <table id="myTable" class="table table-head-fixed text-nowrap">
                       <thead>
@@ -312,18 +323,28 @@
   </footer>
   </div>
   <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.18/r-2.2.2/datatables.min.js"></script>
+
+
   <script src="static\plugins\jquery\jquery.min.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='plugins/jquery/jquery.min.js')}}"></script>
 
   <script src="static\plugins\bootstrap\js\bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='plugins/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
 
   <script src="static\dist\js\adminlte.js"></script>
+   <script type="text/javascript" src="{{url_for('static', filename='dist/js/adminlte.js')}}"></script>
 
 
   <script src="static\plugins\chart.js\Chart.min.js"></script>
+     <script type="text/javascript" src="{{url_for('static', filename='plugins/chart.js/Chart.min.js')}}"></script>
 
   <script src="static\dist\js\demo.js"></script>
+  <script type="text/javascript" src="{{url_for('static', filename='dist/js/demo.js')}}"></script>
 
   <script src="static\dist\js\pages\dashboard3.js"></script>
+
+ <script type="text/javascript" src="{{url_for('static', filename='dist/js/pages/dashboard3.js')}}"></script>
+
   <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.js"></script>
 
 
