--- a/Templates/Cargar.html
+++ b/Templates/Cargar.html
@@ -47,13 +47,20 @@
               <div class="card-header">
               </div>
               <div class="card-body">
-    
+            
                 <div id="actions" class="row">
                 <form action="/Subir" method="post" enctype="multipart/form-data">
                   <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+                  <input type="hidden" value="{{ current_user.id}}" class="form-control" placeholder="Full name"
+                    name="usuario" id="usuario">
+                  
                   <div class="mb-3">
                     <label for="formFile" class="form-select">Subir archivo</label>
+                   
                     <input class="form-control" type="file" id="subirarchivo" name="subirarchivo" >
+                   
+                    
+                
                     
                   </div>
                   
