--- a/Templates/csv_descargar.html
+++ b/Templates/csv_descargar.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Historial CVS</h1>
+              <h1>Historial CSV</h1>
             </div>
             <div class="col-sm-6">
 
@@ -64,16 +64,16 @@
                         <th>nombre</th>
                         <th>cedula</th>
                         <th>edad_de_ingreso</th>
-                        <th>trabaja</th>
-                        <th>Tipo_de_población</th>
+                        <th>Actualmente_trabaja</th>
+                        <th>Tipo_de_población_a_la_que_pertenece</th>
                         <th>ESTADO_CIVIL</th>
-                        <th>financia</th>
+                        <th>Cómo_financia_sus_estudios</th>
                         <th>CIRCUNSCRIPCION</th>
-                        <th>computador</th>
-                        <th>Posee_conexión</th>
+                        <th>Dispone_de_un_computador_permanentemente</th>
+                        <th>Posee_conexión_permanente_a_internet</th>
                         <th>sexo</th>
                         <th>estrato</th>
-                        <th>resultado</th>
+                        <th>FKresultado</th>
                       </tr>
                     </thead>
                     <tbody>
