--- a/Templates/Estudiantes_carrera.html
+++ b/Templates/Estudiantes_carrera.html
@@ -35,7 +35,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1>Historial CSV</h1>
+              <h1>{{carrera}}</h1>
             </div>
             <div class="col-sm-6">
 
@@ -85,12 +85,12 @@
                         <td>{{filas.nombre}}</td>
                         <td>{{filas.cedula}}</td>
                         <td>{{filas.edad_de_ingreso}}</td>
-                        <td> {{filas.Actualmente_trabaja}}</td>
+                        <td>{{filas.Actualmente_trabaja}}</td>
                         <td>{{filas.Tipo_de_población_a_la_que_pertenece}} </td>
                         <td>{{filas.ESTADO_CIVIL}}</td>
                         <td>{{filas.Cómo_financia_sus_estudios}}</td>
-                        <td> {{filas.CIRCUNSCRIPCION}}</td>
-                        <td> {{filas.Dispone_de_un_computador_permanentemente}}</td>
+                        <td>{{filas.CIRCUNSCRIPCION}}</td>
+                        <td>{{filas.Dispone_de_un_computador_permanentemente}}</td>
                         <td>{{filas.Posee_conexión_permanente_a_internet}}</td>
                         <td>{{filas.sexo}} </td>
                         <td>{{filas.estrato}}</td>
